[gd_scene load_steps=8 format=2]

[ext_resource path="res://PerksWindow.gd" type="Script" id=1]
[ext_resource path="res://GHAttack.tres" type="Theme" id=2]
[ext_resource path="res://bg3.png" type="Texture" id=3]
[ext_resource path="res://DeckButton.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 600, 1024 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="PerksWindow" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="PerksContainer" type="PanelContainer" parent="."]
margin_right = 600.0
margin_bottom = 957.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="PerksScrollBox" type="ScrollContainer" parent="PerksContainer"]
margin_right = 600.0
margin_bottom = 957.0

[node name="PerksList" type="VBoxContainer" parent="PerksContainer/PerksScrollBox"]
margin_right = 88.0
margin_bottom = 88.0
custom_constants/separation = 10

[node name="ClassIcon" parent="PerksContainer/PerksScrollBox/PerksList" instance=ExtResource( 4 )]
margin_right = 88.0
margin_bottom = 88.0

[node name="PerksButtons" type="HBoxContainer" parent="."]
margin_top = 961.0
margin_right = 600.0
margin_bottom = 1024.0
size_flags_horizontal = 3

[node name="Done" type="Button" parent="PerksButtons"]
margin_right = 298.0
margin_bottom = 63.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 2 )
text = "Set Cards"

[node name="Cancel" type="Button" parent="PerksButtons"]
margin_left = 302.0
margin_right = 600.0
margin_bottom = 63.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 3 )
text = "Cancel"

[connection signal="pressed" from="PerksButtons/Done" to="." method="_on_Done_pressed"]
[connection signal="pressed" from="PerksButtons/Cancel" to="." method="_on_Cancel_pressed"]
